enh: Add refresh button and cache GitHub repo list